snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.pom.md5
a8c9c136a0c1244d580145c515f3b322